# xthings

./: .gitignore  LICENSE  README.md  analyze.bat  build.bat  pyproject.toml  test.bat  test.http  test_pypylon.py
examples/: demo_server.py  demo_zcclient.py
src/xthings/: __init__.py  action.py  action_manager.py  decorators.py  demo_server.py  demo_zcclient.py  descriptors.py  errors.py  property.py  server.py  streaming.py  utils.py  websocket.py  xthing.py  xthing_zeroconf.py  xthings_descriptor.py  xthings_server.py  xthings_server_demo.py
src/xthings/action/: __init__.py  action_manager.py
src/xthings/decorators/: __init__.py  action.py  property.py
src/xthings/descriptors/: __init__.py  action.py  property.py  stream.py  xthings.py
src/xthings/examples/: demo_server.py
src/xthings/server/: __init__.py  xthings_server.py  xthings_websocket.py  xthings_zeroconf.py
src/xthings/streaming/: __init__.py  image_streaming.py
tests/: test_action.py  test_property.py  test_stream.py  test_xthings_server.py  test_xthings_server_websocket.py
